<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroShopping</string>
    <string name="app_name1"><i>AndroShopping</i></string>
    <string name="menu">AndroShopping Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_producte">Crear Producto</string>
    <string name="action_usuari">Crear Usuario</string>
    <string name="action_remove">Eliminar producto</string>
    <string name="action_sortir">Salir</string>
    <string name="title_activity_login_page">LoginPage</string>
    <string name="title_activity_register_page">RegisterPage</string>
    <string name="title_activity_gestion_productos">GestionProductos</string>
    <string name="title_activity_new_product">NewProduct</string>
    <string name="title_activity_view_product">ViewProduct</string>
    <string name="title_activity_gestion_usuario">GestionUsuario</string>
    <string name="title_activity_gestion_usuarios">GestionUsuarios</string>
    <string name="title_activity_new_user">NewUser</string>
    <string name="title_activity_view_user">ViewUser</string>
    <string name="title_activity_listado_ventas">ListadoVentas</string>
    <string name="title_activity_comprar">Comprar</string>
    <string name="title_activity_historic_compres">HistoricCompres</string>
    <string name="tituloLogin"><u><b>Autenticación</b></u></string>
    <string name="email">Email</string>
    <string name="contrasenya">Contraseña</string>
    <string name="recordatori">Recuerdame la próxima vez</string>
    <string name="entrar">Entrar</string>
    <string name="registro"><i><u>No tienes cuenta? Regístrate</u></i></string>
    <string name="tituloRegistre"><u><b>Alta de usuarios nuevos</b></u></string>
    <string name="repContrasenya">Repita la contraseña</string>
    <string name="genere">Género</string>
    <string name="nom">Nombre</string>
    <string name="edat">Data de nacimiento</string>
    <string name="condicions">Acepto las condiciones del servicio</string>
    <string name="registrarse">Registrarse</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="descripcio">Descripción</string>
    <string name="foto">Foto</string>
    <string name="preu">Precio</string>
    <string name="actiuProd">Producto activo</string>
    <string name="stock">Stock</string>
    <string name="selec_foto">Seleccionar foto</string>
    <string name="title_activity_menu_admin">MenuAdmin</string>
    <string name="title_activity_menu_user">MenuUser</string>
    <string name="gestionProductos">Gestionar productos</string>
    <string name="estadoVentas">Estado de ventas</string>
    <string name="gestionUsuarios">Gestionar usuarios</string>
    <string name="perfil">Perfil</string>
    <string name="comprar">Comprar</string>
    <string name="historicCompres">Histórico de compras</string>
    <string name="salir">Salir</string>
    <string name="title_activity_date_picker">DatePicker</string>
    <string name="button">D</string>
    <string name="modificar">Modificar</string>
    <string name="crear">Crear</string>
    <string name="select_prod">Selecciona un producto: </string>
    <string name="select_user">Selecciona un usuario: </string>
    <string name="nou_producte">Añade producto</string>
    <string name="nou_usuari">Añade usuario</string>
    <string name="dialog_title">Confirmación:</string>
    <string name="dialog_text">¿Está seguro que quiere eliminar el producto seleccionado?</string>
    <string name="dialog_accept">Aceptar</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="title_activity_first_step">FirstStep</string>
    <string name="title_activity_second_step">SecondStep</string>
    <string name="title_activity_third_step">ThirdStep</string>
    <string name="title_gestioProductes"><small>Gestionar Productos</small></string>
    <string name="title_menuAdmin"><small>AndroShopping Manager</small></string>
    <string name="title_menuUser"><small>AndroShopping</small></string>
    <string name="title_viewProduct"><small>Ver Producto</small></string>
    <string name="title_gestioUsuaris"><small>Gestionar usuarios</small></string>
    <string name="title_newUser"><small>Nuevo usuario</small></string>
    <string name="title_viewUser"><small>Ver usuario</small></string>
    <string name="title_newProduct"><small>Nuevo producto</small></string>
    <string name="title_ventas"><small>Ventas</small></string>
    <string name="title_buy"><small>Comprar</small></string>
    <string name="title_historico"><small>Histórico</small></string>
    <string name="title_perfil"><small>Perfil</small></string>
    <string name="title_confirmar"><small>Confirmar Compra</small></string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="remove">Delete</string>
    <string name="insertar">Insertar</string>
    <string name="tag">Nombre tag...</string>
    <string name="step1">1</string>
    <string name="step2">2</string>
    <string name="step3">3</string>
    <string name="Anterior">Anterior</string>
    <string name="Seguent">Continuar</string>
    <string name="info"><b><u>INFORMACIÓN BÁSICA</u></b></string>
    <string name="nom_"><u>Nombre: </u></string>
    <string name="descripcio_"><u>Descripción: </u></string>
    <string name="foto_">Foto: </string>
    <string name="preu_"><u>Precio: </u></string>
    <string name="stock_"><u>Stock: </u></string>
    <string name="tags_"><u>Tags: </u></string>
    <string name="email_"><u>Email: </u></string>
    <string name="edad_"><u>Edad: </u></string>
    <string name="compras_"><u>Compras Realizadas: </u></string>
    <string name="total_"><u>Dinero total invertido: </u></string>
    <string name="diallog_no_connection">No tienes connexión a internet</string>
    <string name="dialog_no_connection_title">Error de connexion</string>
    <string name="dialog_no_connection_retry">Reintentar</string>
    <string name="dialog_no_connection_continue">Continuar sin conexion</string>

    <string name="tipus">Tipus</string>
    <string name="user">user</string>
    <string name="admin">admin</string>
    <string name="title_activity_confirmar_compra">ConfirmarCompra</string>

    <string name="error_mail">Empty email!</string>
    <string name="error_min_pass">The minimum password lenght is 6</string>
    <string name="error_user">Usuari o contrasenya incorrectes</string>
    <string name="error_mail_format">Invalid mail format!</string>
</resources>
