<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="com.enric.androshoping.Activitats.NewProduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:id="@+id/btnA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/step1"/>
        <Button
            android:id="@+id/btnB"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/step2"/>
        <Button
            android:id="@+id/btnC"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/step3"/>

    </LinearLayout>

    <FrameLayout
        android:name="com.example.fragmentexample.FragmentClassA"
        android:id="@+id/frameLayout1"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btnAnt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Anterior"
            android:layout_marginRight="18dp"/>
        <Button
            android:id="@+id/btnSeg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="18dp"
            android:text="@string/Seguent"/>

        </LinearLayout>

</LinearLayout>
