<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="11"
    tools:context="com.enric.androshoping.Activitats.ViewProduct">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            >

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/txtTituloReg"
                android:text="@string/info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="#000"/>
            <TextView
                android:id="@+id/txtNom"
                android:text="@string/nom_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/txtDescripcio"
                android:text="@string/descripcio_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/txtFoto"
                android:text="@string/foto_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imvFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
            

            <TextView
                android:id="@+id/txtPreu"
                android:text="@string/preu_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/txtStock"
                android:text="@string/stock_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"/>

            <TextView
                android:id="@+id/txtTags"
                android:text="@string/tags_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="#000"/>
            
            </LinearLayout>
    </ScrollView>




</LinearLayout>
