<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3CB371"
    tools:context="com.enric.androshoping.Activitats.RegisterPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#e1dddd"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:weightSum="12"
            android:background="#FFF"
            android:orientation="vertical">
        <TextView
            android:id="@+id/txtTituloReg"
            android:text="@string/tituloRegistre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="#000"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textSize="17sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColorHint="#000"
            android:textColor="#000"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:id="@+id/txtContra1"
                android:text="@string/contrasenya"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="0dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/edtContra1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="15sp"
                android:inputType="textPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:weightSum="2">
            <TextView
                android:id="@+id/txtContra2"
                android:text="@string/repContrasenya"
                android:layout_width="match_parent"
                android:gravity="center_vertical"
                android:layout_height="0dp"
                android:textSize="15sp"
                android:layout_weight="1"
                android:textColor="#000"/>
            <EditText
                android:id="@+id/edtContra2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textSize="15sp"
                android:inputType="textPassword"/>
        </LinearLayout>
        <TextView
            android:id="@+id/txtGenero"
            android:text="@string/genere"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="0dp"
            android:textSize="15sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="0.75"
            android:textColor="#000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton android:id="@+id/radiobutton_hom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hombre"/>
                <RadioButton android:id="@+id/radiobutton_muj"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mujer"/>
            </RadioGroup>
        </LinearLayout>
        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:textColorHint="#000"
            android:textSize="15sp"
            android:textColor="#000"
            android:hint="@string/nom"
            android:inputType="text"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:weightSum="6">
            <EditText
                android:id="@+id/edtDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="date"
                android:hint="@string/edat"
                android:textColorHint="#000"
                android:layout_weight="4.5"
                android:textSize="15sp"
                android:textColor="#000"
                android:paddingRight="20dp"
                android:layout_marginRight="20dp"/>

            <ImageButton
                android:id="@+id/btnDate_picker"
                android:layout_width="0dp"
                android:src="@drawable/calendar"
                android:layout_weight="1.5"
                android:scaleType="fitXY"
                android:layout_height="50dp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/checkcondicions"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_height="0dp"
            android:text="@string/condicions"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:id="@+id/btnRegistrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registrarse"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
 </LinearLayout>

